cm4all-beng-proxy (0.6.17) unstable; urgency=low

  * tcp-stock: implemented a load balancer

 --

cm4all-beng-proxy (0.6.16) unstable; urgency=low

  * tcp-stock: added support for bulldog-tyke
  * sink-buffer: close input if it's not used in the constructor
  * http-cache-memcached: close response body when deserialization fails
  * serialize: fix regression in serialize_uint64()

 -- Max Kellermann <mk@cm4all.com>  Tue, 15 Sep 2009 19:26:07 +0200

cm4all-beng-proxy (0.6.15) unstable; urgency=low

  * http-cache-choice: find more duplicates during cleanup
  * handler: added AJP handler
  * ajp-request: unref pool only on tcp_stock failure
  * ajp-client: prevent parser recursion
  * ajp-client: free request body when response is closed
  * ajp-client: reuse connection after END_RESPONSE packet
  * ajp-client: enable TCP_CORK while sending
  * istream-ajp-body: added a second "length" header field
  * ajp-client: auto-send empty request body chunk
  * ajp-client: register "write" event after GET_BODY_CHUNK packet
  * ajp-client: implemented request and response headers
  * http-cache-rfc: don't rewind tpool if called recursively

 -- Max Kellermann <mk@cm4all.com>  Fri, 11 Sep 2009 16:04:06 +0200

cm4all-beng-proxy (0.6.14) unstable; urgency=low

  * istream-tee: don't restart reading if already in progress

 -- Max Kellermann <mk@cm4all.com>  Thu, 03 Sep 2009 13:21:06 +0200

cm4all-beng-proxy (0.6.13) unstable; urgency=low

  * cookie-server: fix parsing multiple cookies
  * http-cache-memcached: clean up expired "choice" items
  * sink-gstring: use callback instead of public struct
  * istream-tee: restart reading when one output is closed

 -- Max Kellermann <mk@cm4all.com>  Wed, 02 Sep 2009 17:02:53 +0200

cm4all-beng-proxy (0.6.12) unstable; urgency=low

  * http-cache: don't attempt to remove cache items when the cache is disabled

 -- Max Kellermann <mk@cm4all.com>  Fri, 28 Aug 2009 15:40:48 +0200

cm4all-beng-proxy (0.6.11) unstable; urgency=low
